27 Oct 2006 Reformatted dyncrypt.c, no functional change - Bernard
26 Oct 2006 make KM/KMC/KMAC/KIMD/KLMD compliant regarding stringent
            register checkings as per POP - Ivan Warren
25 Oct 2006 Performance enhancements suggested by Kees, part 1
            distinguish between strict/non-strict load/store - Greg Smith
19 Oct 2006 Fix TUNSETIFF problem on linux 2.6.18 - Greg Smith
12 Oct 2006 Fix 370 and 390 only modes - Greg Smith
09 Oct 2006 Fix some compiler warnings - Ivan Warren
02 Oct 2006 Fix some interval timer processing issues - Ivan Warren
01 Oct 2006 minor(?) accuracy/efficiency tweaks to Win32 'gettimeofday' - Fish
30 Sep 2006 timer interval config stmt & panel cmd - Enrico Sorichetti by Fish
30 Sep 2006 Use nanosleep in timer_update_thread if available - Fish
28 Sep 2006 RSS instruction format and ECTG instruction - Jan Jaeger
26 Sep 2006 PR# misc/99: Config file "include <filename>" with "Enhanced"
            symbol substitution - Hackules by Enrico Sorichetti by Fish
26 Sep 2006 Fix ieee bfp to integer conversions - Jimmy by Greg Smith
23 Sep 2006 RO/RW/RING/NORING tape config options (replaces previous
            RO/NORING) - Kevin Leonard by Jay Maynard
22 Sep 2006 Fix possible loop in SERVC WRITE_EVENT_DATA - Jan Jaeger
22 Sep 2006 PR# misc/30: HAO (Hercules Automatic Operator) - Bernard
            van der Helm by Fish
21 Sep 2006 PR# misc/79: single device devlist & defsym command - Fish
20 Sep 2006 PR# misc/98: "Additive" OSTAILOR - Fish
20 Sep 2006 PR# misc/89: fix "HHCCP038E No SCP command" - Fish
19 Sep 2006 Added RO and NORING as synonyms for READONLY tape config option;
            fixed compilation if SCSI not supported - Jay Maynard
15 Sep 2006 PR# misc/96: fix premature .RC processing wrt CPUSTATE - Fish
06 Sep 2006 Win32 PCRE (Perl-Compatible Regular Expression) support - Fish
31 Aug 2006 Support emulating 3590 SCSI as 3480/3490's and vice versa - Fish